--- a/k-main/src/main/resources/templates/blog/_header.html
+++ b/k-main/src/main/resources/templates/blog/_header.html
@@ -3,7 +3,7 @@
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>${user.name!"无名氏"}</title>
+    <title>${title!"小葵博客"}</title>
     <link href="${ctxPath}/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="${ctxPath}/lib/layui/css/layui.css" rel="stylesheet"/>
     <link href="${ctxPath}/css/blog.css" rel="stylesheet"/>
