--- a/k-main/src/main/resources/templates/index.html
+++ b/k-main/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
         }
 
         .layui-card-body p {
-            margin-bottom: 8px;
+            margin-bottom: 7px;
         }
 
         .layui-card {
@@ -32,14 +32,14 @@
             color: #5B995B;
         }
         .no-hover a:hover {
-            color: green;
+            color: #5B995B;
             cursor: default;
         }
         .layui-card-body a:hover {
             cursor: pointer;
         }
         .p1 {
-            margin: 5px auto 5px 25px;
+            margin: 2px auto 3px 25px;
         }
         .p2 {
             margin-top: 20px;
@@ -60,7 +60,7 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <a href="https://blog.xiaokui.site" title="访问我的个人博客">个人博客</a>
+                    <a href="/blog" title="访问我的个人博客" target="_blank">个人博客</a>
                 </div>
                 <div class="layui-card-body">
                     <p>本人自2017年6月写第一篇博客开始，至今已有近3年博客创作历史，
@@ -73,7 +73,7 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <a href="" title="点击查看详情">精通Spring</a>
+                    <a href="/spring" title="点击查看详情">精通Spring</a>
                 </div>
                 <div class="layui-card-body">
                     <p>本人自2017年12月份开始看Spring源码，至今仍在不断学习。
@@ -90,11 +90,11 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header no-hover">
-                    <a href="">业务/工作小结</a>
+                    <a href="/blog/good-looking-hk/pro">业务/工作小结</a>
                 </div>
                 <div class="layui-card-body">
-                    <p>里面包含了个人毕业这一年来对于工作的一点小结，主要分为业务层面和代码层面，内容不多，就不单独开个页面了，如下</p>
-                    <p class="p1" style="margin-top: 18px;"><a>小额支付业务总结</a></p>
+                    <p>里面包含了个人毕业这一年来对于工作中的一点小结，主要分为业务层面和代码层面，内容不多，就不单独开个页面了，如下</p>
+                    <p class="p1" style="margin-top: 18px;"><a href="/" target="_blank">小额支付业务总结</a></p>
                     <p class="p1"><a>积分中心业务总结</a></p>
                 </div>
             </div>
@@ -121,8 +121,7 @@
                     <a href="" title="假设我是面试官">假设我是面试官</a>
                 </div>
                 <div class="layui-card-body">
-                    <p>玩个游戏，假如我是面试官的话：
-                    </p>
+                    <p>暂时让您作为局外人，从另一个角度观察我，没准能帮您省下不少时间。假如我是面试官的话：</p>
                     <p class="p1">
                         我可能会问以下问题....
                     </p>
@@ -130,7 +129,7 @@
                         我可能希望面试者能这样回答....
                     </p>
                     <p class="p1">
-                        我可能....
+                        我可能就是这么菜....
                     </p>
                 </div>
             </div>
@@ -138,12 +137,12 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header no-hover">
-                    <a href="">完整版简历</a>
+                    <a href="javascript:void(0)">完整版简历</a>
                 </div>
                 <div class="layui-card-body">
                     <p class="p2">麻烦您了，这是 <a>完整版简历</a>，这是之前的 <a>简易版简历</a>。
                     </p>
-                    <p class="p2">茫茫人海，相逢即是缘，希望有机会与 您 共事，感谢阅读，谢谢！</p>
+                    <p class="p2">茫茫人海，相逢即是缘，很希望将来有机会能与 您 共事，感谢阅读，谢谢！</p>
                 </div>
             </div>
         </div>
@@ -152,8 +151,8 @@
 
 <div style="margin-top: 40px">
     <div class="bottomDiv">
-        <a href="/nginx?type=access">nginx访问日志</a>、<a href="/nginx?type=error">nginx错误日志</a>、
-        <a href="/web/log?key=199710">本网站日志</a>
+        <a href="/nginx?type=access" target="_blank">nginx访问日志</a>、<a href="/nginx?type=error" target="_blank">nginx错误日志</a>、
+        <a href="/web/log?key=199710" target="_blank">本网站日志</a>
     </div>
     <div class="bottomDiv">
         <a href="http://www.beian.miit.gov.cn">湘ICP备17005816号</a>
