--- a/k-main/src/main/resources/static/css/blog.css
+++ b/k-main/src/main/resources/static/css/blog.css
@@ -149,6 +149,7 @@ ul.list-group {
 .right-nav {
     /*background: #F8F8F8;*/
     width: 15%;
+    /*max-height: 30%;*/
     /*width: 280px;*/
     padding-bottom: 12px;
     padding-left: 8px;
@@ -161,6 +162,44 @@ ul.list-group {
     border: solid #eeeeee 2px;
     /*border: solid green 1px;*/
     border-radius: 4px;
+    overflow-y: auto;
+
+    /*overflow-y: auto;*/
+}
+
+/*—滚动条默认显示样式–*/
+::-webkit-scrollbar-thumb{
+    background-color:#018EE8;
+    height:50px;
+    outline-offset:-2px;
+    outline:2px solid #fff;
+    -webkit-border-radius:4px;
+    border: 2px solid #fff;
+}
+
+/*—鼠标点击滚动条显示样式–*/
+::-webkit-scrollbar-thumb:hover{
+    background-color:#FB4446;
+    height:50px;
+    -webkit-border-radius:4px;
+}
+
+/*—滚动条大小–*/
+::-webkit-scrollbar{
+    width:11px;
+    height:18px;
+}
+
+/*—滚动框背景样式–*/
+::-webkit-scrollbar-track-piece{
+    background-color:#fff;
+    -webkit-border-radius:0;
+}
+
+.right-nav li{
+    margin-left: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .left-nav {
@@ -198,15 +237,22 @@ ul.list-group {
     text-align: center;
 }
 
+.right-nav .sp1 {
+    float: right;
+    font-size: 13px;
+    display: inline-block;
+}
+
 .right-nav .p1 {
     white-space:nowrap;overflow:hidden;text-overflow:ellipsis;
     float: unset;
+    display: block;
 }
 
 .right-nav .p2 {
     white-space:nowrap;overflow:hidden;text-overflow:ellipsis;
     float: unset;
-    display: inline;
+    display: block;
 }
 
 
