--- a/k-main/src/main/resources/templates/root/index.html
+++ b/k-main/src/main/resources/templates/root/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>感谢来访</title>
-    <link href="${ctxPath}/lib/layui/css/layui.css" rel="stylesheet"/>
+    <link href="layui/css/layui.css" rel="stylesheet"/>
     <style>
         .layui-card-header {
             display: block;
@@ -60,7 +60,7 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <a href="/blog" title="访问我的个人博客" target="_blank">个人博客</a>
+                    <a href="https://blog.xiaokui.site" title="访问我的个人博客" target="_blank">个人博客</a>
                 </div>
                 <div class="layui-card-body">
                     <p>本人自2017年6月写第一篇博客开始，至今已有近3年博客创作历史，
@@ -89,8 +89,8 @@
     <div class="layui-row layui-col-space25">
         <div class="layui-col-md6">
             <div class="layui-card">
-                <div class="layui-card-header no-hover">
-                    <a href="/blog/good-looking-hk/pro">业务/工作小结</a>
+                <div class="layui-card-header">
+                    <a href="/blog/good-looking-hk?type=pro&passwd=黄葵" target="_blank" title="包含个人工作至今的一点文字">业务/工作小结</a>
                 </div>
                 <div class="layui-card-body">
                     <p>里面包含了个人毕业这一年来对于工作中的一点小结，主要分为业务层面和代码层面，内容不多，就不单独开个页面了，如下</p>
@@ -102,7 +102,7 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <a href="">本网站架构/项目演示/分布式探讨</a>
+                    <a href="">开源项目</a>
                 </div>
                 <div class="layui-card-body">
                     <p>主要分为以下三个模块：</p>
@@ -118,10 +118,10 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <a href="" title="假设我是面试官">假设我是面试官</a>
+                    <a href="" title="假如我是面试官">假如我是面试官**</a>
                 </div>
                 <div class="layui-card-body">
-                    <p>暂时让您作为局外人，从另一个角度观察我，没准能帮您省下不少时间。假如我是面试官的话：</p>
+                    <p>暂时让 您 作为局外人，从另一个角度观察我，没准能帮 您 省下不少时间。假如我是面试官的话：</p>
                     <p class="p1">
                         我可能会问以下问题....
                     </p>
@@ -129,7 +129,7 @@
                         我可能希望面试者能这样回答....
                     </p>
                     <p class="p1">
-                        我可能就是这么菜....
+                        我可能就是这么菜~ ~ ~
                     </p>
                 </div>
             </div>
@@ -140,9 +140,9 @@
                     <a href="javascript:void(0)">完整版简历</a>
                 </div>
                 <div class="layui-card-body">
-                    <p class="p2">麻烦您了，这是 <a>完整版简历</a>，这是之前的 <a>简易版简历</a>。
+                    <p class="p2">麻烦 您 了，这是 <a>完整版简历</a>，这是之前的 <a>简易版简历</a>。
                     </p>
-                    <p class="p2">茫茫人海，相逢即是缘，很希望将来有机会能与 您 共事，感谢阅读，谢谢！</p>
+                    <p class="p2">茫茫人海，相逢即是缘，真的很希望将来有机会能与 您 共事，感谢阅读，谢谢！</p>
                 </div>
             </div>
         </div>
@@ -159,8 +159,8 @@
     </div>
 </div>
 
-<script src="${ctxPath}/lib/jquery/jquery.min.js"></script>
-<script src="${ctxPath}/lib/layui/layui.js"></script>
+<script src="jquery/jquery.min.js"></script>
+<script src="layui/layui.js"></script>
 </body>
 </body>
 </html>
