--- a/k-main/src/main/resources/templates/blog/_header.html
+++ b/k-main/src/main/resources/templates/blog/_header.html
@@ -25,9 +25,9 @@
 <!--            <div class="search">-->
 <!--                <input type="text"/><button>搜索</button>-->
 <!--            </div>-->
-            <div style="display: inline-block;">
+            <div>
                 <input type="text" name="key" id="key" autocomplete="off" placeholder="快速搜索 如多线程"
-                       class="layui-input search" style="width:60%;">
+                       class="layui-input search" style="width:60%;margin-left: 5%">
                 <button class="layui-btn layui-btn-primary search" onclick="search()">
                     搜索
                 </button>
