--- a/k-main/src/main/resources/templates/blog/index.html
+++ b/k-main/src/main/resources/templates/blog/index.html
@@ -16,60 +16,5 @@
     <center style="margin: 60px;"><h3>空空如也</h3></center>
     @}
 </div>
-@if (isNotEmpty(view)) {
-<div class="right-nav hid">
-    <p>最多访问</p>
-    <ul>
-        @for (r in view) {
-        <li>
-            <span class="layui-bg-gray sp1">${r.viewCount}次</span>
-            <a target="_blank" href="${ctxPath + r.blogPath}"
-               class="p1">${rLP.index}.${r.dir}:${r.title}</a>
-        </li>
-        @}
-        <!--<li>-->
-        <!--<a href="/blog">测试测试测试测试测试测试测试测试测试</a>-->
-        <!--<span class="layui-badge layui-bg-gray" style="margin-left:5px">999999999999次</span>-->
-        <!--</li>-->
-    </ul>
-</div>
-@}
-@if (isNotEmpty(upload)) {
-<div class="right-nav hid" style="top: 460px;">
-    <p>最新发布</p>
-    <ul>
-        @for (r in upload) {
-        <li>
-            <span class="layui-bg-gray sp1">${r.createTime, "yyyyMMdd"}</span>
-            <a target="_blank" href="${ctxPath + r.blogPath}"
-               class="p1">${rLP.index}.${r.dir}:${r.title}</a>
-        </li>
-        @}
-    </ul>
-</div>
-@}
-@if (isNotEmpty(recommend)) {
-<div class="right-nav hid" style="left:5%;padding-bottom:2px;">
-    <p>推荐阅读</p>
-    <ul>
-        @for (r in recommend) {
-        <li>
-            <span class="layui-bg-gray sp1">${'热度' + r.recommendValue}</span>
-            <a target="_blank" href="${ctxPath + r.blogPath}"
-               class="p1">${rLP.index}.${r.dir}:${r.title}</a>
-        </li>
-        @}
-    </ul>
-</div>
-@}
-<div id="aplayer"></div>
-<div style="padding-top: 20px;padding-bottom:10px;clear: both">
-    <center>公开博客 ${user.pub} 篇，非公开博客 ${user.pro} 篇，Since 2017-2020，All Right Reserved</center>
-    <center><a href="http://www.beian.miit.gov.cn">湘ICP备17005816号</a></center>
-</div>
-<script src="${ctxPath}/lib/jquery/jquery.min.js"></script>
-<script src="${ctxPath}/lib/layui/layui.js"></script>
-<script src="${ctxPath}/js/common/HK.js"></script>
-<script src="${ctxPath}/aplayer/APlayer.min.js"></script>
-<script src="${ctxPath}/aplayer/myAplayer.js"></script>
+@include("/blog/_common_nav.html"){}
 @include("/blog/_footer.html"){}
