--- a/k-main/src/main/resources/templates/root/index.html
+++ b/k-main/src/main/resources/templates/root/index.html
@@ -73,7 +73,7 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <a href="/spring" title="点击查看详情">精通Spring</a>
+                    <a href="https://blog.xiaokui.site/blog/good-looking-hk/search?key=Spring%E6%BA%90%E7%A0%81" title="点击查看详情" target="_blank">精通Spring</a>
                 </div>
                 <div class="layui-card-body">
                     <p>本人自2017年12月份开始看Spring源码，至今仍在不断学习。
@@ -105,10 +105,10 @@
                     <a href="">开源项目</a>
                 </div>
                 <div class="layui-card-body">
-                    <p>主要分为以下三个模块：</p>
-                    <p class="p1">1、本网站就是我的一个作品，<a>点击这里</a> 查看本网站的特点、架构以及源码</p>
-                    <p class="p1">2、<a>点击这里</a> 在线体验和智能机器人聊天</p>
-                    <p class="p1">3、<a>点击这里</a> 扫码关注公众号，并和智能机器人聊天</p>
+                    <p>主要包含开源项目的说明、演示以及源码，大致包含以下以下几大块：</p>
+                    <p class="p1">1、小葵博客平台、微信公众号、公众号机器人</p>
+                    <p class="p1">2、在线文件服务器/短链接转换</p>
+                    <p class="p1">3、迷你QQ、在线音乐平台、俄罗斯方块</p>
                 </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
         </div>
         <div class="layui-col-md6">
             <div class="layui-card">
-                <div class="layui-card-header no-hover">
+                <div class="layui-card-header">
                     <a href="javascript:void(0)">完整版简历</a>
                 </div>
                 <div class="layui-card-body">
@@ -151,8 +151,8 @@
 
 <div style="margin-top: 40px">
     <div class="bottomDiv">
-        <a href="/nginx?type=access" target="_blank">nginx访问日志</a>、<a href="/nginx?type=error" target="_blank">nginx错误日志</a>、
-        <a href="/web/log?key=199710" target="_blank">本网站日志</a>
+        <a href="https://blog.xiaokui.site/nginx?type=access" target="_blank">nginx访问日志</a>、<a href="https://blog.xiaokui.site/nginx?type=error" target="_blank">nginx错误日志</a>、
+        <a href="https://blog.xiaokui.site/web/log?key=199710" target="_blank">本网站日志</a>
     </div>
     <div class="bottomDiv">
         <a href="http://www.beian.miit.gov.cn">湘ICP备17005816号</a>
