--- a/k-main/src/main/resources/templates/blog/_footer.html
+++ b/k-main/src/main/resources/templates/blog/_footer.html
@@ -49,7 +49,7 @@
             } else {
                 layer.prompt({
                     formType: 0,
-                    title: "仅对部分人开发，密码格式如华为-张三-199906-425",
+                    title: "仅对部分人开发，请输入访问密码：",
                     success: function (layero, index) {
                         HK.bindLayerBtn();
                     },
