--- a/k-main/src/main/resources/templates/root/index.html
+++ b/k-main/src/main/resources/templates/root/index.html
@@ -90,12 +90,12 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <a href="/blog/good-looking-hk?type=pro&passwd=黄葵" target="_blank" title="包含个人工作至今的一点文字">业务/工作小结</a>
+                    <a href="https://blog.xiaokui.site/blog/good-looking-hk?type=pro&passwd=黄葵" target="_blank" title="包含个人工作至今的一点文字">业务/工作小结</a>
                 </div>
                 <div class="layui-card-body">
                     <p>里面包含了个人毕业这一年来对于工作中的一点小结，主要分为业务层面和代码层面，内容不多，就不单独开个页面了，如下</p>
-                    <p class="p1" style="margin-top: 18px;"><a href="/" target="_blank">小额支付业务总结</a></p>
-                    <p class="p1"><a>积分中心业务总结</a></p>
+                    <p class="p1" style="margin-top: 18px;"><a href="https://blog.xiaokui.site/blog/good-looking-hk/%E9%87%91%E5%BE%AE%E8%93%9D/%E5%B0%8F%E9%A2%9D%E6%94%AF%E4%BB%98%E4%B8%9A%E5%8A%A1%E6%80%BB%E7%BB%93" target="_blank">小额支付业务总结</a></p>
+                    <p class="p1"><a target="_blank" href="https://blog.xiaokui.site/blog/good-looking-hk/%E9%87%91%E5%BE%AE%E8%93%9D/%E7%A7%AF%E5%88%86%E4%B8%AD%E5%BF%83%E4%B8%9A%E5%8A%A1%E6%80%BB%E7%BB%93">积分中心业务总结</a></p>
                 </div>
             </div>
         </div>
@@ -151,7 +151,7 @@
 
 <div style="margin-top: 40px">
     <div class="bottomDiv">
-        <a href="https://blog.xiaokui.site/nginx?type=access" target="_blank">nginx访问日志</a>、<a href="https://blog.xiaokui.site/nginx?type=error" target="_blank">nginx错误日志</a>、
+        <a href="https://blog.xiaokui.site/web/nginx?type=access" target="_blank">nginx访问日志</a>、<a href="https://blog.xiaokui.site/web/nginx?type=error" target="_blank">nginx错误日志</a>、
         <a href="https://blog.xiaokui.site/web/log?key=199710" target="_blank">本网站日志</a>
     </div>
     <div class="bottomDiv">
