--- a/k-main/src/main/resources/templates/root/index.html
+++ b/k-main/src/main/resources/templates/root/index.html
@@ -102,12 +102,12 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <a href="">开源项目</a>
+                    <a href="https://github.com/good-looking-hk" target="_blank" title="有待完善">开源项目</a>
                 </div>
                 <div class="layui-card-body">
-                    <p>主要包含开源项目的说明、演示以及源码，大致包含以下以下几大块：</p>
+                    <p>主要包含开源项目的说明、演示以及源码，大致包含以下以下几大块（有待完善）：</p>
                     <p class="p1">1、小葵博客平台、微信公众号、公众号机器人</p>
-                    <p class="p1">2、在线文件服务器/短链接转换</p>
+                    <p class="p1">2、在线文件服务器/<a href="https://s.xiaokui.site" target="_blank" title="点击访问">短链接转换</a></p>
                     <p class="p1">3、迷你QQ、在线音乐平台、俄罗斯方块</p>
                 </div>
             </div>
@@ -118,7 +118,7 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    <a href="" title="假如我是面试官">假如我是面试官**</a>
+                    <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=假如我是面试官" title="假如我是面试官" target="_blank">假如我是面试官**</a>
                 </div>
                 <div class="layui-card-body">
                     <p>暂时让 您 作为局外人，从另一个角度观察我，没准能帮 您 省下不少时间。假如我是面试官的话：</p>
@@ -136,11 +136,12 @@
         </div>
         <div class="layui-col-md6">
             <div class="layui-card">
-                <div class="layui-card-header">
+                <div class="layui-card-header no-hover">
                     <a href="javascript:void(0)">完整版简历</a>
                 </div>
                 <div class="layui-card-body">
-                    <p class="p2">麻烦 您 了，这是 <a>完整版简历</a>，这是之前的 <a>简易版简历</a>。
+                    <p class="p2">麻烦 您 了，这是 <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=%E7%AE%80%E5%8E%86" title="完整版简历" target="_blank">完整版简历</a>，
+                        这是之前的 <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=%E7%AE%80%E5%8E%86" title="简易版简历" target="_blank">简易版简历</a>。
                     </p>
                     <p class="p2">茫茫人海，相逢即是缘，真的很希望将来有机会能与 您 共事，感谢阅读，谢谢！</p>
                 </div>
@@ -151,7 +152,8 @@
 
 <div style="margin-top: 40px">
     <div class="bottomDiv">
-        <a href="https://blog.xiaokui.site/web/nginx?type=access" target="_blank">nginx访问日志</a>、<a href="https://blog.xiaokui.site/web/nginx?type=error" target="_blank">nginx错误日志</a>、
+        <a href="https://blog.xiaokui.site/web/nginx?type=access" target="_blank">nginx访问日志</a>、
+<!--        <a href="https://blog.xiaokui.site/web/nginx?type=error" target="_blank">nginx错误日志</a>、-->
         <a href="https://blog.xiaokui.site/web/log?key=199710" target="_blank">本网站日志</a>
     </div>
     <div class="bottomDiv">
