--- a/k-main/src/main/resources/templates/sys/manage.html
+++ b/k-main/src/main/resources/templates/sys/manage.html
@@ -259,11 +259,7 @@
                 </button>
             </div>
             <div class="form-group">
-                <button type="button" class="layui-btn" name="file" id="uploadResume"><i class="layui-icon">&#xe67c;</i>更新简历
-                </button>
-            </div>
-            <div class="form-group">
-                <button type="button" class="layui-btn" name="file" id="uploadAbout"><i class="layui-icon">&#xe67c;</i>更新关于
+                <button type="button" class="layui-btn" name="file" id="user"><i class="layui-icon">&#xe67c;</i>自定义
                 </button>
             </div>
             <!-- /.form-group -->
