添加微服务、多模块化构建

--- a/k-main/src/main/resources/templates/blog/_header.html
+++ b/k-main/src/main/resources/templates/blog/_header.html
@@ -16,7 +16,7 @@
     <div class="layui-main">
         <ul class="layui-nav fly-nav" id="nav-log" >
             <a href="/login">
-                <img class="img-circle" alt="用户头像" height="54" title="${user.selfDescription!'该用户的什么都没留下'}"
+                <img class="img-circle" alt="用户头像" height="54" title="${site.xiaokui.user.selfDescription!'该用户的什么都没留下'}"
                      width="54" src="${ctxPath + user.avatar!'/img/rabbit.gif'}"/>
                 ${user.name}
             </a>
