--- a/k-main/src/main/resources/templates/root/index.html
+++ b/k-main/src/main/resources/templates/root/index.html
@@ -46,13 +46,13 @@
         }
         .bottomDiv {
             text-align: center;
-            width: 400px;
-            margin:15px auto 10px;
+            width: 800px;
+            margin:5px auto 5px;
         }
     </style>
 </head>
 <body>
-<div class="layui-main" style="margin-top: 4%;">
+<div class="layui-main" style="margin-top: 3%;">
 
     <h1>您好！ 请问您对以下哪项最感兴趣：</h1>
     <hr>
@@ -136,8 +136,8 @@
         </div>
         <div class="layui-col-md6">
             <div class="layui-card">
-                <div class="layui-card-header no-hover">
-                    <a href="javascript:void(0)">完整版简历</a>
+                <div class="layui-card-header">
+                    <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=%E7%AE%80%E5%8E%86" title="完整版简历" target="_blank">完整版简历</a>
                 </div>
                 <div class="layui-card-body">
                     <p class="p2">麻烦 您 了，这是 <a href="https://blog.xiaokui.site/blog/good-looking-hk/user?name=%E7%AE%80%E5%8E%86" title="完整版简历" target="_blank">完整版简历</a>，
@@ -152,9 +152,12 @@
 
 <div style="margin-top: 40px">
     <div class="bottomDiv">
-        <a href="https://blog.xiaokui.site/web/nginx?type=access" target="_blank">nginx访问日志</a>、
-<!--        <a href="https://blog.xiaokui.site/web/nginx?type=error" target="_blank">nginx错误日志</a>、-->
-        <a href="https://blog.xiaokui.site/web/log?key=199710" target="_blank">本网站日志</a>
+        <p>        <a href="https://blog.xiaokui.site/web/nginx?type=access" target="_blank">nginx访问日志</a>、
+            <!--        <a href="https://blog.xiaokui.site/web/nginx?type=error" target="_blank">nginx错误日志</a>、-->
+            <a href="https://blog.xiaokui.site/web/log?key=199710" target="_blank">本网站日志</a>、
+            <a href="https://hb.xiaokui.site/">后备:https://hb.xiaokui.site</a>
+        </p>
+        <p style="margin-top: 5px;"> <a>佛系少年，在线随缘，每周一大更</a></p>
     </div>
     <div class="bottomDiv">
         <a href="http://www.beian.miit.gov.cn">湘ICP备17005816号</a>
@@ -163,6 +166,8 @@
 
 <script src="jquery/jquery.min.js"></script>
 <script src="layui/layui.js"></script>
-</body>
+<div hidden>
+    <script src="https://s13.cnzz.com/z_stat.php?id=1264398488&web_id=1264398488"></script>
+</div>
 </body>
 </html>
